--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Lab 1(edit)</title>
+    <title>Lab 3 Git&GitHub</title>
 
 
 </head>
