--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
 <body>
     <header>
+		<h1>Work with GitHub</h1>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light sticky-top">
                 <a class="navbar-brand" href="index.html">
